Risk/Missing_Network_Segmentation_Controls/test-exam-1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test-client
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.6.0
      command: ["sleep", "3600"]


# POD_IP=$(kubectl get pod test-server -o jsonpath='{.status.podIP}')
# kubectl exec -it test-client -- curl -s http://$POD_IP
