Risk/Missing_Network_Segmentation_Controls/test-exam-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-client
  namespace: default
  labels:
    role: app
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.6.0
      command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: other-client
  namespace: default
  labels:
    role: other
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.6.0
      command: ["sleep", "3600"]
---

apiVersion: v1
kind: Pod
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
---

# POD_IP=$(kubectl get pod test-server -o jsonpath='{.status.podIP}')
# kubectl exec -it other-client -- curl -s http://$POD_IP
# kubectl exec -it app-client -- curl -s http://$POD_IP
