Risk/Missing_Network_Segmentation_Controls/networkpolicy_exam_2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-server-allow-app-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: test-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: app
      ports:
        - protocol: TCP
          port: 80
